--- a/projects/templates/delete_project.html
+++ b/projects/templates/delete_project.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FlowOps - Supprimer un Projet</title>
+  <title>FollowOps - Supprimer un Projet</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?display=swap&family=Inter:wght@400;500;700;900&family=Noto+Sans:wght@400;500;700;900">
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
